fix spacing error

--- a/tip_app_main/static/tip_app_main/main.css
+++ b/tip_app_main/static/tip_app_main/main.css
@@ -431,8 +431,8 @@ secondary.dropdown-toggle{
     color: #5f5d61;
     font-size: 14px;
     font-weight: 500; */
-    min-width: 120px;
-    width: 120px;
+    /* min-width: 120px; */
+    width: 150px;
 }
 
 .col_user_body{
